# template_python

./: .gitignore  .gitignore.gitignore  .gitignore.txt  .pre-commit-config.yaml  CITATION.cff  EXPLANATION.txt  README.md  arima.ipynb  main.py  mkdocs.yml  pyproject.toml  pyvenv.cfg  tutorial.ipynb
dataset/BR/: aluguel_ibov.parquet  ibov_comp.parquet  prices_ibov.parquet  selic.parquet
dataset/US/: fed_rate.parquet  sp_comp.parquet
docs/: .$Softwarex-componente_cpi.drawio.png.dtmp  explanation.md  how-to-guides.md  index.md  reference.md  tutorials.md
docs/files/: portPINxIbov.html
docs/materials/: TearSheet.html
docs/storage/: series_500_1034.parquet
docs/tutorials/: MetaLabeling_Project.ipynb  main.ipynb  portminrisk.html  tutorial1.ipynb  tutorial_cpi.ipynb
fico/: PyCPI.py  __init__.py  calculations.py  componente_cpi.py  componente_cpi_rev2.py  cpi.py  cpi_auxiliares.py  cpi_helpers.py  get_retornos_sp.py  initial_weights.py  load_data.py  lstm_strategy.py  pipeline_cpi_final.ipynb  strategy_meta_labeling_r04.py  strategy_simulator.py
fico/data/cedro_data/: AALR3.csv  ABCB4.csv  ABEV3.csv  AERI3.csv  AESB3.csv  AFLT3.csv  AGRO3.csv  AGXY3.csv  ALLD3.csv  ALPA3.csv  ALPA4.csv  ALPK3.csv  ALSO3.csv  ALUP11.csv  ALUP3.csv  ALUP4.csv  AMAR3.csv  AMBP3.csv  AMER3.csv  ANIM3.csv  APER3.csv  ARML3.csv  ARZZ3.csv  ASAI3.csv  ATMP3.csv  ATOM3.csv  AURA33.csv  AURE3.csv  AVLL3.csv  AZEV3.csv  AZEV4.csv  AZUL4.csv  B3SA3.csv  BAHI3.csv  BALM3.csv  BALM4.csv  BAUH4.csv  BAZA3.csv  BBAS3.csv  BBDC3.csv  (+387 more)
fico/data/economatica_data/: ibov.xlsx
fico/data/results/: eligible_stocks.csv  returns.csv
fico/data/results/weights/: long.csv  long.json  longonly.csv  longonly.json  short.csv  short.json
fico/modules/: __init__.py  dataset.py  pin_estimation.py  portfolio_build.py  returns.py  stock_selection.py
site/: 404.html  index.html  objects.inv
site/explanation/: index.html
site/how-to-guides/: index.html
site/reference/: index.html
site/search/: search_index.json
site/tutorials/: index.html
